--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       font-weight: 400;
       letter-spacing: 0.8px;
       padding-bottom: 60px;
+      line-height: 25px;
     }
     .sedan{
       background-color: hsl(31, 77%, 52%);
@@ -125,7 +126,11 @@
         width: min-content;
       }
       .service p{
-        padding-bottom: 20px;
+        font-size: 14px;
+        padding-bottom: 30px;
+      }
+      .service{
+        padding: 48px 35px;
       }
       
     }
