--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       padding: 0;
       box-sizing: border-box;
     }
+    html{
+      font-size: 62.5%;
+    }
     body{
       height: 100vh;
       width: 100vw;
@@ -50,19 +53,19 @@
       width: 315px
     }
     .service h1{
-      font-size: 42px;
-      margin: 30px 0px;
+      font-size: 4.2rem;
+      margin: 3rem 0rem;
       font-family: 'Big Shoulders Display', cursive;
       text-transform: uppercase;
     }
     .service p{
-      font-size: 15px;
+      font-size: 1.5rem;
       font-family: 'Lexend Deca', sans-serif;
       color: hsla(0, 0%, 100%, 0.75);
       font-weight: 400;
-      letter-spacing: 0.8px;
-      padding-bottom: 60px;
-      line-height: 25px;
+      letter-spacing: 0.08rem;
+      padding-bottom: 6rem;
+      line-height: 2.5rem;
     }
     .sedan{
       background-color: hsl(31, 77%, 52%);
@@ -74,10 +77,10 @@
       background-color: hsl(179, 100%, 13%);
     }
     button{
-      font-size: 14px;
+      font-size: 1.4rem;
       font-family: 'Lexend Deca', sans-serif;
-      padding: 12px 25px;
-      border-radius: 20px;
+      padding: 1.2rem 2.5rem;
+      border-radius: 2rem;
       border: none;
     }
    
@@ -93,12 +96,12 @@
     }
     button:hover{
       background-color: transparent;
-      outline: 2px solid hsl(0, 0%, 95%);
+      outline: 0.2rem solid hsl(0, 0%, 95%);
       color: hsl(0, 0%, 95%);
       cursor: pointer;
     }
     .attribution {
-      font-size: 11px;
+      font-size: 1.1rem;
       text-align: center;
     }
 
@@ -110,12 +113,6 @@
       body{
         justify-content: start;
       }
-      .container{
-        margin: 100px 0px;
-      }
-      .service p{
-        padding-bottom: 20px;
-      }
       
     }
     @media only screen and (max-width:629px) {
@@ -126,11 +123,11 @@
         width: min-content;
       }
       .service p{
-        font-size: 14px;
-        padding-bottom: 30px;
+        font-size: 1.4rem;
+        padding-bottom: 3rem;
       }
       .service{
-        padding: 48px 35px;
+        padding: 4.8rem 3.5rem;
       }
       
     }
@@ -170,12 +167,12 @@
 
 
 
+<footer><div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="https://github.com/PriyoBROTO04">Priyobroto Kar</a>.
+</div></footer>
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/PriyoBROTO04">Priyobroto Kar</a>.
-  </div>
+  
 </body>
 
 </html>
